# lib-tts

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: main.yml
cmake/: dependencies.cmake  flags.cmake
cmake/vcpkg/: setup.cmake
cmake/vcpkg/triplets/: arm64-linux-custom.cmake  arm64-linux-release-custom.cmake  x64-linux-custom.cmake  x64-linux-release-custom.cmake
conf/: .asoundrc  init.json
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt
examples/basic/src/: main.cpp
examples/googleapi/: CMakeLists.txt
examples/googleapi/src/: main.cpp
examples/googlebasic/: CMakeLists.txt
examples/googlebasic/src/: main.cpp
examples/googlecloud/: CMakeLists.txt
examples/googlecloud/src/: main.cpp
inc/: helpers.hpp  texttospeech.hpp
inc/tts/: factory.hpp  helpers.hpp
inc/tts/interfaces/: googleapi.hpp  googlebasic.hpp  googlecloud.hpp  texttovoice.hpp
info/: .asoundrc  .asoundrc.1  alsa-base.conf  info.txt
scripts/: .asoundrc  appendbr.sh  play_tts.sh  play_tts_extended.sh  play_tts_googleapi.sh
scripts/audio/: recording.flac
src/: googleapi.cpp  googlebasic.cpp  googlecloud.cpp  helpers.cpp  texttospeech.cpp  texttovoice.cpp
tests/: CMakeLists.txt
tests/cmake/: dependencies.cmake  flags.cmake
tests/cmake/vcpkg/: setup.cmake
tests/conf/: init.json
tests/inc/mocks/: mock_command.hpp  mock_helpers.hpp  mock_shell.hpp
tests/scripts/: check-coverage.sh
tests/src/: main.cpp  test_tts.cpp
